# sqlite-to-parquet

./: .gitignore
parquet/: README.md  pyproject.toml
parquet/parquet/: parquet.py
